Fixed top and bottom spacing of thanks a bunch

--- a/src/_styles/_thanks-a-bunch.less
+++ b/src/_styles/_thanks-a-bunch.less
@@ -1,7 +1,7 @@
 .centered-content {
 	display: flex;
 	align-items: center;
-	height: 100%;
+	min-height: 100%;
 	justify-content: center;
 	&:extend(.flower-background);
 	.centered-content-inner {
